minor grammatical number fix

--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-15 04:02-0600\n"
-"PO-Revision-Date: 2021-10-16 13:37+0200\n"
+"PO-Revision-Date: 2021-10-19 13:37+0200\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/gpodder/language/"
 "sk/)\n"
@@ -1963,7 +1963,7 @@ msgid ""
 "Your version of youtube-dl %(have_version)s has known issues, please upgrade "
 "to %(want_version)s or newer."
 msgstr ""
-"Vaše youtube-dl verzie %(have_version)s má známe problémy, aktualizujte "
+"Vaša youtube-dl verzia %(have_version)s má známe problémy, aktualizujte "
 "prosím na verziu %(want_version)s alebo novšiu."
 
 #: share/gpodder/extensions/youtube-dl.py:467
