--- a/po/nb.po
+++ b/po/nb.po
@@ -15,8 +15,7 @@ msgstr ""
 "POT-Creation-Date: 2021-10-15 04:02-0600\n"
 "PO-Revision-Date: 2021-10-16 12:30+0000\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>\n"
-"Language-Team: Liberium"
-"language/nb/)\n"
+"Language-Team: Liberium\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
