Translation update (sk)

--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-02-02 19:43-0700\n"
-"PO-Revision-Date: 2021-10-19 13:37+0200\n"
+"PO-Revision-Date: 2022-02-04 13:37+0200\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/gpodder/language/"
 "sk/)\n"
@@ -278,10 +278,8 @@ msgid "Error copying %(from_file)s to %(to_file)s: %(message)s"
 msgstr "Chyba pri kopírovaní %(from_file)s do %(to_file)s: %(message)s"
 
 #: src/gpodder/sync.py:729
-#, fuzzy
-#| msgid "Syncing %s"
 msgid "Syncing"
-msgstr "Synchronizácia %s"
+msgstr "Synchronizácia"
 
 #: src/gpodder/syncui.py:89
 msgid "No device configured"
@@ -386,23 +384,23 @@ msgstr "a"
 #: src/gpodder/util.py:1493
 #, python-format
 msgid "System default program '%(opener)s' not found"
-msgstr ""
+msgstr "Predvolený program '%(opener)s' nebol nájdený"
 
 #: src/gpodder/util.py:1502
 #, python-format
 msgid "Cannot open file/folder '%(filename)s' using default program"
 msgstr ""
+"Súbor alebo priečinok '%(filename)s' nie je možné otvoriť pomocou "
+"predvoleného programu"
 
 #: src/gpodder/util.py:1504
 #, python-format
 msgid "Cannot open '%(filename)s' using '%(opener)s'"
-msgstr ""
+msgstr "'%(filename)s' nie je možné otvoriť pomocou '%(opener)s'"
 
 #: src/gpodder/util.py:1506
-#, fuzzy
-#| msgid "Cannot open device"
 msgid "Cannot open file/folder"
-msgstr "Zariadenie nie je možné otvoriť"
+msgstr "Súbor alebo priečinok nie je možné otvoriť"
 
 #: src/gpodder/gtkui/app.py:176
 msgid "Cannot start gPodder"
@@ -512,7 +510,7 @@ msgstr "Vyberte akciu, kterou chcete vykonať."
 
 #: src/gpodder/gtkui/main.py:576
 msgid "A_pply"
-msgstr ""
+msgstr "_Použiť"
 
 #: src/gpodder/gtkui/main.py:612
 msgid "Uploading subscriptions"
@@ -817,7 +815,7 @@ msgstr "_Zrušiť"
 #: src/gpodder/gtkui/main.py:1979 src/gpodder/gtkui/main.py:2994
 #: src/gpodder/gtkui/main.py:3322
 msgid "_Delete"
-msgstr "_Odstrániť"
+msgstr "Odst_rániť"
 
 #: src/gpodder/gtkui/main.py:2008
 msgid "Send to"
@@ -984,10 +982,8 @@ msgstr[1] "Dostupné %(count)d nové epizódy"
 msgstr[2] "Dostupných %(count)d nových epizód"
 
 #: src/gpodder/gtkui/main.py:2844
-#, fuzzy
-#| msgid "Quit"
 msgid "_Quit"
-msgstr "Ukončiť"
+msgstr "_Ukončiť"
 
 #: src/gpodder/gtkui/main.py:2846
 msgid "Quit gPodder"
@@ -1080,10 +1076,8 @@ msgid "Select the episodes you want to download:"
 msgstr "Vyberte epizódy, ktoré chcete stiahnuť:"
 
 #: src/gpodder/gtkui/main.py:3189
-#, fuzzy
-#| msgid "Mark as old"
 msgid "_Mark as old"
-msgstr "Označiť ako staré"
+msgstr "Označiť ako s_taré"
 
 #: src/gpodder/gtkui/main.py:3196
 msgid "Please check for new episodes later."
@@ -1506,10 +1500,8 @@ msgid "Remove"
 msgstr "Odstrániť"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:138
-#, fuzzy
-#| msgid "Download"
 msgid "_Download"
-msgstr "Stiahnuť"
+msgstr "_Stiahnuť"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:282
 msgid "Select all"
@@ -2166,22 +2158,16 @@ msgid "Select episodes"
 msgstr "Vybrať epizódy"
 
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:2
-#, fuzzy
-#| msgid "Remove"
 msgid "_Remove"
-msgstr "Odstrániť"
+msgstr "Odst_rániť"
 
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:5
-#, fuzzy
-#| msgid "Select all"
 msgid "Select _all"
-msgstr "Vybrať všetko"
+msgstr "_Vybrať všetko"
 
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:6
-#, fuzzy
-#| msgid "Select none"
 msgid "Select _none"
-msgstr "Nevybrať žiadne"
+msgstr "_Nevybrať žiadne"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:1
 msgid "Find new podcasts"
