Fix double word in Norwegian Nynorsk translation.

--- a/po/nn.po
+++ b/po/nn.po
@@ -1649,7 +1649,7 @@ msgstr "Byt ut abonnementslista på tenaren"
 
 #: src/gpodder/gtkui/desktop/preferences.py:595
 msgid "Remote podcasts that have not been added locally will be removed on the server. Continue?"
-msgstr "Eksterne podkastar som ikkje er lagde til lokalt, vert fjerna på tenaren. Vil du du halda fram?"
+msgstr "Eksterne podkastar som ikkje er lagde til lokalt, vert fjerna på tenaren. Vil du halda fram?"
 
 #: src/gpodder/gtkui/desktop/preferences.py:671
 msgid "Select folder for mount point"
