fix grammar for NotFound msg and undo translations

--- a/po/es.po
+++ b/po/es.po
@@ -548,12 +548,18 @@ msgstr "Lista subida con éxito."
 #: src/gpodder/gtkui/main.py:626
 msgid ""
 "\n"
-"                    Server did not find your device\n"
+"                    Could not find your device.\n"
 "\n"
-"                    Check login is with username (not email)\n"
-"                    And that device name matches one in your account\n"
+"                    Check login is a username (not an email)\n"
+"                    and that the device name matches one in your account.\n"
 "                    "
 msgstr ""
+"\n"
+"Dispositivo no encondrado.\n"
+"\n"
+"Compruebe que la sesión es con el nombre de el usario (no el correo electrónico)\n"
+"y que el nombre de el dispositivo corresponde con uno que exsiste en la cuenta.\n"
+""
 
 #: src/gpodder/gtkui/main.py:634
 msgid "Error while uploading"
