--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -547,10 +547,10 @@ msgid ""
 "                    "
 msgstr ""
 "\n"
-"Dispositivo no encondrado\n"
+"Dispositivo no encondrado.\n"
 "\n"
-"Compruebe que la sesión es con el nombre de el usario (no el corea electronico)\n"
-"Y que el nombre de el dispositivo corresponde a uno en la cuenta\n"
+"Compruebe que la sesión es con el nombre de el usario (no el correo electrónico)\n"
+"y que el nombre de el dispositivo corresponde con uno que exsiste en la cuenta.\n"
 ""
 
 #: src/gpodder/gtkui/main.py:634
