--- a/po/messages.pot
+++ b/po/messages.pot
@@ -513,10 +513,10 @@ msgstr ""
 #: src/gpodder/gtkui/main.py:626
 msgid ""
 "\n"
-"                    Could not find your device\n"
+"                    Could not find your device.\n"
 "\n"
-"                    Check login is with username (not email)\n"
-"                    And that device name matches one in your account\n"
+"                    Check login is a username (not an email)\n"
+"                    and that the device name matches one in your account.\n"
 "                    "
 msgstr ""
 
