Turkish translation fix
fix Hiçbirini_seçme to Seçimleri_kaldır

--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder 3.10.21\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-08 22:08-0700\n"
-"PO-Revision-Date: 2022-04-07 14:57+0300\n"
+"PO-Revision-Date: 2022-04-10 16:36+0300\n"
 "Last-Translator: Serkan ÖNDER <serkanonder@outlook.com>\n"
 "Language-Team: \n"
 "Language: tr\n"
@@ -1510,7 +1510,7 @@ msgstr "Tümünü _seç"
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:6
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:5
 msgid "Select _none"
-msgstr "Hiçbirini _seçme"
+msgstr "Seçimleri _kaldır"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:318
 msgid "Nothing selected"
