translation check and corrections

--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder 3.10.21\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-03-08 22:08-0700\n"
-"PO-Revision-Date: 2022-04-10 16:36+0300\n"
+"PO-Revision-Date: 2022-04-11 10:00+0300\n"
 "Last-Translator: Serkan ÖNDER <serkanonder@outlook.com>\n"
 "Language-Team: \n"
 "Language: tr\n"
@@ -420,7 +420,7 @@ msgstr "gPodder hakkında"
 #: share/gpodder/ui/gtk/gpodderconfigeditor.ui.h:2
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:3
 msgid "_Close"
-msgstr "_Kapat"
+msgstr "Kapa_t"
 
 #: src/gpodder/gtkui/app.py:226
 msgid "Website"
@@ -465,7 +465,7 @@ msgstr "gPodder"
 
 #: src/gpodder/gtkui/main.py:364 share/gpodder/ui/gtk/menus.ui.h:30
 msgid "E_xtras"
-msgstr "E_kstralar"
+msgstr "Ekstra_lar"
 
 #: src/gpodder/gtkui/main.py:365
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:38
@@ -509,7 +509,7 @@ msgstr "Gerçekleştirmek istediğiniz eylemleri seçin."
 
 #: src/gpodder/gtkui/main.py:576
 msgid "A_pply"
-msgstr "U_ygula"
+msgstr "_Uygula"
 
 #: src/gpodder/gtkui/main.py:612
 msgid "Uploading subscriptions"
@@ -1074,7 +1074,7 @@ msgstr "İndirmek istediğiniz bölümleri seçin:"
 
 #: src/gpodder/gtkui/main.py:3197
 msgid "_Mark as old"
-msgstr "_Eski olarak işaretle"
+msgstr "Eski ola_rak işaretle"
 
 #: src/gpodder/gtkui/main.py:3204
 msgid "Please check for new episodes later."
@@ -1401,7 +1401,7 @@ msgstr "Pano boş"
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:3
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:4
 msgid "_OK"
-msgstr "_TAMAM"
+msgstr "TA_MAM"
 
 #: src/gpodder/gtkui/interface/common.py:177
 msgid "Username"
@@ -1498,19 +1498,19 @@ msgstr "Kaldır"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:138
 msgid "_Download"
-msgstr "_İndir"
+msgstr "İ_ndir"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:282
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:5
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:4
 msgid "Select _all"
-msgstr "Tümünü _seç"
+msgstr "T_ümünü seç"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:286
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:6
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:5
 msgid "Select _none"
-msgstr "Seçimleri _kaldır"
+msgstr "Seçimler _iptal"
 
 #: src/gpodder/gtkui/desktop/episodeselector.py:318
 msgid "Nothing selected"
@@ -2074,7 +2074,7 @@ msgstr "Yeni bir podcast ekle"
 
 #: share/gpodder/ui/gtk/gpodderaddpodcast.ui.h:5
 msgid "_Paste"
-msgstr "_Yapıştır"
+msgstr "Yapı_ştır"
 
 #: share/gpodder/ui/gtk/gpodderchannel.ui.h:1
 msgid "Channel Editor"
@@ -2144,7 +2144,7 @@ msgstr "Ara:"
 
 #: share/gpodder/ui/gtk/gpodderconfigeditor.ui.h:4
 msgid "_Show All"
-msgstr "_Tümünü Görüntüle"
+msgstr "_Hepsini Görüntüle"
 
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:1
 msgid "Select episodes"
@@ -2152,7 +2152,7 @@ msgstr "Bölüm seçin"
 
 #: share/gpodder/ui/gtk/gpodderepisodeselector.ui.h:2
 msgid "_Remove"
-msgstr "_Kaldır"
+msgstr "_Iskarta"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:1
 msgid "Find new podcasts"
@@ -2172,7 +2172,7 @@ msgstr "Ekle"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:2
 msgid "_Edit config"
-msgstr "_Yapılandırmayı düzenle"
+msgstr "Yapılandırmayı _düzenle"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:4
 msgid "Video player:"
@@ -2348,7 +2348,7 @@ msgstr "Podcast Bul"
 
 #: share/gpodder/ui/gtk/menus.ui.h:12
 msgid "_Subscriptions"
-msgstr "_Abonelikler"
+msgstr "A_bonelikler"
 
 #: share/gpodder/ui/gtk/menus.ui.h:13
 msgid "Discover new podcasts"
@@ -2368,7 +2368,7 @@ msgstr "OPML dosyasına aktar"
 
 #: share/gpodder/ui/gtk/menus.ui.h:20
 msgid "_Episodes"
-msgstr "_Bölümler"
+msgstr "B_ölümler"
 
 #: share/gpodder/ui/gtk/menus.ui.h:25
 msgid "Delete"
